tests/suite/errors/e06_no_field_on_struct.rs
// err: no field `z` on `Point`

struct Point {
    x: i32,
    y: i32,
}

fn main() {
    let p: Point = Point { x: 1, y: 2 };
    println!("{}", p.z);
}
